# graphium

client/: .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: backend.ts  edge.frag  edge.vert  globals.d.ts  graph.ts  main.tsx  node.frag  node.vert  passthrough.frag  passthrough.vert  preamble.glsl  renderer.ts  theme.css  theme.ts  ui.tsx  util.tsx  webgl.ts
codegen/: main.ts  model.spec
cpp/: .gitignore  CMakeLists.txt  util.js
cpp/src/: graph.hpp  interface.hpp  main.cpp  model.hpp  out.hpp  pool.hpp  util.hpp  worker.js
shared/: model.spec
util/: build.ts  codegen.ts  model.spec  out.cpp
